# ChargedHiggsAnalysisV3

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SKFlatOutput  SKNanoAnalyzer  setup.sh
.claude/: settings.local.json
Common/Data/: KFactors.json  Luminosity.json
Common/Tools/: CONFIGURATION_REFERENCE.md  DataFormat.py  HistoUtils.py  example_channel_text_configs.json  plotter.py  plotter.py.bak
Common/Tools/cpp/: CMakeLists.txt
Common/Tools/cpp/include/: AmassFitter.h  LinkDef.h  Preprocessor.h
Common/Tools/cpp/scripts/: build.sh
Common/Tools/cpp/src/: AmassFitter.cc  Preprocessor.cc
DiLepton/: CLAUDE.md  JETVETOMAP.md  doThis.sh
GenKinematics/: doThis.sh  histConfigs.json
LeptonIDTest/: CLAUDE.md  README.md  doThis.sh
MeasFakeRateV3/: doThis.sh
MeasFakeRateV4/: CLAUDE.md  WORKFLOW.md  doThis.sh
MeasJetTagEff/: CLAUDE.md
MeasTrigEff/: CLAUDE.md  copyResults.sh
ParametricParticleNet/: ParametricParticleNet.md
ParticleNet/: CLAUDE.md  Makefile  README.md  doThis.sh  run_experiment.sh  submit.slurm
ParticleNetMD/: CLAUDE.md  WORKFLOW.md  doThis.sh  submit.slurm  submit_sweep.slurm
SignalKinematics/: doThis.sh
SignalRegionStudy/: .gitignore  CMakeLists.txt  README.md  doThis.sh  setup.sh
SignalRegionStudy/.claude/: settings.local.json
SignalRegionStudy/configs/: samplegroups.json  systematics.json  systematics.json.bak
SignalRegionStudy/docs/: API_REFERENCE.md  BUILD_NOTES.md  COMBINE_WORKFLOW.md  NEGATIVE_BINS_HANDLING.md  PARTICLENET_WORKFLOW.md  WORKFLOW_GUIDE.md  systematics.md
SignalRegionStudy/include/: Preprocessor.h
SignalRegionStudy/python/: checkTemplates.py  collectLimits.py  makeBinnedTemplates.py  plotLimits.py  plotParticleNetScore.py  preprocess.py  printDatacard.py
SignalRegionStudy/scripts/: build.sh  prepareCombine.sh  runCombine.sh  runCombineWrapper.sh
SignalRegionStudy/src/: AmassFitter.cc  Preprocessor.cc
SignalRegionStudyV1/: CLAUDE.md  Impact.sh  Limits.md  Systematics.md  datacard_MuMix_MN50_2M_2018.txt  doThis.sh  partialUnblind.sh  setup.sh  signalInj.sh
SignalRegionStudyV2/: BOARD.md  CLAUDE.md  TODO.md  doThis.sh  setup.sh  temp.sh
TriLepton/: CLAUDE.md  doSampleBreakdown.sh  doThis.sh  measureThis.sh
TriggerStrategy/: CLAUDE.md  doThis.sh
docs/: PIPELINE_PLAN.md
(+12995 files in other folders)
